Revert "Fixed z-index error in navigation"
This reverts commit 107e58e3eae2c31f71b4a5238c104057425d27ee.

--- a/wp-content/themes/engage/assets/scss/components/_menu.scss
+++ b/wp-content/themes/engage/assets/scss/components/_menu.scss
@@ -202,7 +202,6 @@
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  z-index: 999;
   @include media("max", $mobile) {
     padding: 0;
     left: 0;
@@ -214,7 +213,6 @@
 }
 
 .menu__sublist .menu__sublist {
-  z-index: 999;
   display: none;
   position: absolute;
   top: -20px;
